--- a/人事管理系统/人事管理系统.csproj
+++ b/人事管理系统/人事管理系统.csproj
@@ -67,6 +67,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <Content Include="About.aspx" />
+    <Content Include="Man_CURD.aspx" />
+    <Content Include="Default.aspx" />
+    <Content Include="Dep_Brow.aspx" />
+    <Content Include="Dep_CURD.aspx" />
+    <Content Include="Man_Brow.aspx" />
+    <Content Include="Emp_CURD.aspx" />
+    <Content Include="Emp_Brow.aspx" />
+    <Content Include="Form_Emp.aspx" />
+    <Content Include="Form_Man.aspx" />
+    <Content Include="Login.aspx" />
+    <Content Include="Mob_Emp.aspx" />
+    <Content Include="Mob_Man.aspx" />
+    <Content Include="PW_Update.aspx" />
+    <Content Include="Site1.Master" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -78,7 +93,112 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="About.aspx.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="About.aspx.designer.cs">
+      <DependentUpon>About.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Man_CURD.aspx.cs">
+      <DependentUpon>Man_CURD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Man_CURD.aspx.designer.cs">
+      <DependentUpon>Man_CURD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Dep_Brow.aspx.cs">
+      <DependentUpon>Dep_Brow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Dep_Brow.aspx.designer.cs">
+      <DependentUpon>Dep_Brow.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Dep_CURD.aspx.cs">
+      <DependentUpon>Dep_CURD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Dep_CURD.aspx.designer.cs">
+      <DependentUpon>Dep_CURD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Man_Brow.aspx.cs">
+      <DependentUpon>Man_Brow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Man_Brow.aspx.designer.cs">
+      <DependentUpon>Man_Brow.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Emp_CURD.aspx.cs">
+      <DependentUpon>Emp_CURD.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Emp_CURD.aspx.designer.cs">
+      <DependentUpon>Emp_CURD.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Emp_Brow.aspx.cs">
+      <DependentUpon>Emp_Brow.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Emp_Brow.aspx.designer.cs">
+      <DependentUpon>Emp_Brow.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Emp.aspx.cs">
+      <DependentUpon>Form_Emp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Form_Emp.aspx.designer.cs">
+      <DependentUpon>Form_Emp.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Form_Man.aspx.cs">
+      <DependentUpon>Form_Man.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Form_Man.aspx.designer.cs">
+      <DependentUpon>Form_Man.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Login.aspx.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.aspx.designer.cs">
+      <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mob_Emp.aspx.cs">
+      <DependentUpon>Mob_Emp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mob_Emp.aspx.designer.cs">
+      <DependentUpon>Mob_Emp.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Mob_Man.aspx.cs">
+      <DependentUpon>Mob_Man.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Mob_Man.aspx.designer.cs">
+      <DependentUpon>Mob_Man.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PW_Update.aspx.cs">
+      <DependentUpon>PW_Update.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PW_Update.aspx.designer.cs">
+      <DependentUpon>PW_Update.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Site1.Master.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Site1.Master.designer.cs">
+      <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
