--- a/人事管理系统/人事管理系统.csproj
+++ b/人事管理系统/人事管理系统.csproj
@@ -69,6 +69,9 @@
     <None Include="packages.config" />
     <Content Include="About.aspx" />
     <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="Man_CURD.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Dep_Brow.aspx" />
@@ -202,6 +205,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\111\" />
     <Folder Include="database\" />
     <Folder Include="desktopmodules\departmentinfo\" />
     <Folder Include="desktopmodules\employeeinfo\" />
