添加数据库

--- a/人事管理系统/人事管理系统.csproj
+++ b/人事管理系统/人事管理系统.csproj
@@ -72,6 +72,10 @@
     <Content Include="App_Data\Database1_log.ldf">
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\Database2.mdf" />
+    <Content Include="App_Data\Database2_log.ldf">
+      <DependentUpon>Database2.mdf</DependentUpon>
+    </Content>
     <Content Include="Man_CURD.aspx" />
     <Content Include="Default.aspx" />
     <Content Include="Dep_Brow.aspx" />
